@@ -41,6 +41,7 @@ export(binomtestGC)
 export(chisqtestGC)
 export(colPerc)
 export(expCounts)
+export(helpGC)
 export(lmGC)
 export(pbinomGC)
 export(pchisqGC)
